--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Baymax's Blog # the main title
 tagline: "Talk is cheap. Show me the code." # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  这里是Baymax小振的博客
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -203,6 +203,7 @@ jekyll-archives:
     category: /categories/:name/
 
 jekyll_compose:
+  auto_open: true
   default_front_matter:
     drafts:
       title: 
