--- a/_config.yml
+++ b/_config.yml
@@ -127,6 +127,9 @@ paginate: 10
 # The base URL of your site
 baseurl: ""
 
+plugins:
+  - jemoji
+
 # ------------ The following options are not recommended to be modified ------------------
 
 kramdown:
@@ -209,8 +212,10 @@ jekyll_compose:
       title: 
       category:
       tags:
+      typora-root-url: ./..
     posts:
       title: 
       date: 
       category:
       tags:
+      typora-root-url: ./..
