--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ social_preview_image: assets/img/favicons/avatar.png # string, local or CORS res
 toc: true
 
 comments:
-  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: giscus # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -95,14 +95,14 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping: # optional, default to 'pathname'
+    repo: baymax104/baymax104.github.io # <gh-username>/<repo>
+    repo_id: R_kgDOLd0LpQ
+    category: Announcements
+    category_id: DIC_kwDOLd0Lpc4CeBz-
+    mapping: title # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    reactions_enabled: 1 # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
@@ -210,12 +210,13 @@ jekyll_compose:
   default_front_matter:
     drafts:
       title: 
-      category:
+      categories:
       tags:
       typora-root-url: ./..
     posts:
       title: 
       date: 
-      category:
+      categories:
       tags:
+      comments: false
       typora-root-url: ./..
