--- a/_config.yml
+++ b/_config.yml
@@ -48,10 +48,10 @@ google_site_verification: TGMxMQ337dKI-wX4cXqgjK7Ph-4ly5GYpjvCstU0dO8
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
-analytics:
-  google:
-    id: G-6JZ39N2C1H
-  goatcounter:
+google_analytics:
+  id: "G-6JZ39N2C1H" # fill in your Google Analytics ID
+
+goatcounter:
     id: # fill in your GoatCounter ID
 
 # Prefer color scheme setting.
