--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -55,6 +55,7 @@ jobs:
           bundle exec htmlproofer _site \
             \-\-disable-external=true \
             \-\-enforce_https=false \
+            \-\-disable_alt_relative=true \
             \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
 
       - name: Upload site artifact
