--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -51,13 +51,12 @@ jobs:
           JEKYLL_ENV: "production"
 
       - name: Test site
-        run: |
-          bundle exec htmlproofer _site \
-            \-\-disable-external=true \
-            \-\-enforce-https=false \
-            \-\-ignore-missing-alt=true \
-            \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
-            \-\-checks "Links","Scripts"
+        run: >-
+          bundle exec htmlproofer _site 
+            --disable-external=true
+            --enforce-https=true
+            --ignore-missing-alt=true
+            --ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
 
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
