--- a/_data/about.yml
+++ b/_data/about.yml
@@ -27,10 +27,10 @@ prizes:
 hobbies:
   - name: 编程
     icon: "&#x1F4BB;"
-    description: 喜欢探索任何有意思的技术
+    description: 喜欢探索任何有意思的技术（前提是看得懂orz）
   - name: 音乐
     icon: "&#x1F3B5;"
-    description: 喜欢听vocal型的歌手，也喜欢唱
+    description: 喜欢听vocal型的歌手（林俊杰摆烂粉），也喜欢唱（唱得不好听别打我orz）
   - name: 魔方
     icon: '<i class="fa fa-cube" style="margin: 0px 2px 0px 5px;"></i>'
-    description: 三阶魔方平均12秒，也喜欢玩五阶魔方，摆烂中~
+    description: 三阶魔方平均12秒，也喜欢玩五阶魔方，参加过WCA比赛，摆烂中~
