--- a/_data/about.yml
+++ b/_data/about.yml
@@ -33,7 +33,7 @@ hobbies:
     description: 喜欢听vocal型的歌手（林俊杰摆烂粉），也喜欢唱（唱得不好听别打我orz）
   - name: 魔方
     icon: '<i class="fa fa-cube" style="margin: 0px 2px 0px 5px;"></i>'
-    description: 三阶魔方平均12秒，也喜欢玩五阶魔方，参加过WCA比赛，摆烂中~
+    description: 三阶魔方平均12秒，也喜欢玩五阶魔方，参加过WCA比赛（摆烂中~）
   - name: 游戏
     icon: "&#x1F3AE;"
-    description: 主玩QQ飞车手游，其他类型的游戏接触不多（有意思的会尝试一下~）
+    description: 主玩QQ飞车手游，玩过一些肉鸽类，其他类型的游戏接触不多（有意思的会尝试一下~）
