--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -45,10 +45,10 @@ jobs:
           ruby-version: 3.2
           bundler-cache: true
 
-      - name: Build site
-        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
-        env:
-          JEKYLL_ENV: "production"
+      # - name: Build site
+      #   run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
+      #   env:
+      #     JEKYLL_ENV: "production"
 
       - name: Test site
         run: |
