--- a/_config.yml
+++ b/_config.yml
@@ -127,6 +127,7 @@ paginate: 10
 # The base URL of your site
 baseurl: ""
 
+safe: false
 
 # ------------ The following options are not recommended to be modified ------------------
 
