--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -45,10 +45,11 @@ jobs:
           ruby-version: 3.2
           bundler-cache: true
 
-      # - name: Build site
-      #   run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
-      #   env:
-      #     JEKYLL_ENV: "production"
+      # use site built in local if it is commented
+      - name: Build site
+        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
+        env:
+          JEKYLL_ENV: "production"
 
       - name: Test site
         run: |
