--- a/_data/about.yml
+++ b/_data/about.yml
@@ -3,7 +3,7 @@ education:
     profession: 计算机科学与技术
     degree: 本科
     start: "2020.9"
-    end: 至今
+    end: "2024.7"
     logo: /assets/img/about/bjut_logo.jpg
 
 prizes:
