--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,10 +1,16 @@
 education:
+  - name: 燕山大学（YSU）
+    profession: 计算机技术
+    degree: 硕士
+    start: "2024.9"
+    end: "至今"
+    logo: /assets/img/about/ysu_logo.png
   - name: 北京工业大学（BJUT）
     profession: 计算机科学与技术
     degree: 本科
     start: "2020.9"
     end: "2024.7"
-    logo: /assets/img/about/bjut_logo.jpg
+    logo: /assets/img/about/bjut_logo.png
 
 prizes:
   - description: 2023年北京工业大学星火基金重点优秀项目（负责人）
