--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ social:
   email: wzy1048168235@163.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://github.com/Baymax104 # change to your github homepage
+    - https://QQ.com # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
